4. Create CRUD functionality and templates for Corporation model (CREATE and    READ step).
Create templates for the Corporation model:
- Add `templates/corporation/new.html` for creating a new corporation.
- Add `templates/corporation/detail.html` for viewing corporation details.

Develop necessary files and views:
- Create `forms.py` and define `CorporationForm`.
- Implement `NewCorporationView` for handling new corporation creation.
- Implement `CorporationDetailView` for displaying corporation details.
- Create `urls.py` to link the new views.

Update configurations:
- Add links to 'Corporation' URLs in `config/urls.py`.
- Implement `get_absolute_url` in the Corporation model.
- Add a 'New' button on the navbar linked to the corporation creation view.
- Include CSRF context processor in `config/settings/base.py` for enhanced form
  security.

Enhance user profile display:
- add logic to `user_detail.html` for showing corporation name and link to its
  detail view, or a fallback message if no corporation is associated.
- add `get_context_data` function in `UserDetailView` for allowing user profiles
  to display linked corporation information.

Temporarily disable `ACCOUNT_EMAIL_VERIFICATION` during development of Corporation
model functionality.

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -82,6 +82,11 @@
                 <a class="nav-link"
                    href="{% url 'users:detail' request.user.username %}">{% translate "My Profile" %}</a>
               </li>
+              {% if request.user.corporation_set.count == 0 and not request.user.is_superuser %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'corporation:new' %}">{% translate "New" %}</a>
+                </li>
+              {% endif %}
               <li class="nav-item">
                 {# URL provided by django-allauth/account/urls.py #}
                 <a class="nav-link" href="{% url 'account_logout' %}">{% translate "Sign Out" %}</a>
@@ -117,7 +122,6 @@
     {% endif %}
     {% block main %}
       {% block content %}
-        <p>Use this document as a way to quick start any new project.</p>
       {% endblock content %}
     {% endblock main %}
 
